--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,11 @@
             <artifactId>dropwizard-redirect-bundle</artifactId>
             <version>1.3.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.primefaces</groupId>
+            <artifactId>primefaces</artifactId>
+            <version>6.1</version>
+        </dependency>
         <!--        <dependency>-->
         <!--            <groupId>org.glassfish.jaxb</groupId>-->
         <!--            <artifactId>jaxb-runtime</artifactId>-->
